fix accordion caption spacing

--- a/src/app/accordion-item/accordion-item.component.scss
+++ b/src/app/accordion-item/accordion-item.component.scss
@@ -2,6 +2,9 @@
 
 .accordion {
   padding: 20px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
 
   &__caption {
     display: flex;
